[package]
name = "magic-packet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.26.2"
structopt = "0.3.26"

[lib]
name = "magic_packet_builder"
path = "src/lib.rs"

[[bin]]
name = "magic_packet_sender"
path = "src/main.rs"